# tangelo

./: .gitignore  .jscsrc  .jshintrc  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  Gruntfile.js  NOTICE  README.md  README.rst  TODO  Vagrantfile  bootstrap-tangelo.css  bootswatchr-tangelo.json  clear-ner-cache.py  examples.json  index.html  index.js  main.css  package.json  plugin.conf  requirements.txt  restart-xdataweb  server.conf  server.conf.in  setup.cfg  start-xdataweb  start-xdataweb.py  stop-xdataweb  tangelo  tangelo-passwd  tangelo-passwd.in  tangelo.in  tangelo.py  tangelo.py.in  tangelod  tangelod.in  vtkweb-launcher.py  (+4 more)
Tangelo/: setup.py
Tangelo/conf/: tangelo.conf.global  tangelo.conf.local
Tangelo/tangelo/: __init__.py  plugin.py  server.py  stream.py  tool.py  util.py  vtkweb.py  websocket.py
Tangelo/web/: index.html
assets/conf/: tangelo.conf.global  tangelo.conf.local  tangelo.local.conf
cmake/: FindCherryPy.cmake  FindJSDoc.cmake  FindPep8.cmake  FindPhantomJS.cmake  FindPythonModule.cmake  FindSphinx.cmake  FindUglifyJS.cmake  UninstallTangelo.cmake  configure-js-coverage-test.cmake  configure-js-unit-test.cmake  configure-web-content-test.cmake  configure_js_unit_test.cmake  tangelo.cmake  travis-build.cmake  travis-submit.cmake  travis.cmake
data/: flickr_paris_1000.json
data-processing/: charitynet-datefix.py  charitynet-fixup.py  charitynet-join.py  charitynet-lookup-county.py  charitynet-population.py  charitynet-readme.md  csv-quote-fix.py  csv2mongo.py  enron-titan-import.py  enron-upload.py  flip-latlong.py  geo-fieldnames.txt  geo-import.js  kiva-load-lenders.py  kiva-load-loans.py  kiva-readme.md  reorder-loc.py  ssci-data.py
data-processing/timing/: time-all.sh  time-csv2mongo-bare.sh  time-csv2mongo-process.sh  time-csv2mongo.sh  time-mongoimport.sh
docs/: advanced-features.rst  advanced-usage.rst  architecture.rst  basic-usage.rst  building-an-app.rst  bundled-plugins.rst  coding-style-guide.rst  conf.py  developing-visualizations.rst  index.rst  installation.rst  integration.rst  plugins.rst  python-services.rst  releasing-tangelo.rst  setup.rst  tangelo-js.rst  tangelo-manpage.rst  tangelo-passwd-manpage.rst  tangelo-py.rst  testing.rst
docs/static/: barchart.json  index.html  index.js  tangelo-sphinx.css
docs/templates/: layout.html
docs/tutorials/: building-an-app.rst  db-vis.rst  fiddling.rst
examples/: apps.json  index.html  index.js
examples/app-template/: index.html  myapp.js  myservice.py
examples/biofabric/: biofabric.js  index.html
examples/charitynet/: charitynet.js  index.html
examples/code-review/: index.html  topics.txt
examples/enron/: enron.js  index.html
examples/enron-impala/: enron-imp.js  index.html
examples/enron-shark/: enron-shark.js  index.html
examples/enron-spark/: enron-spark.js  index.html
examples/enron-titan/: enron-titan.js  index.html
examples/flickr/: flickr.js  index.html
examples/ner/: index.html  ner.js
examples/promed/: index.html  promed.js  promed_links.json
examples/ssci/: index.html  ssci.js
examples/stats/: index.html
examples/tabbed-example/: chat.js  index.html  respond.js  window-a.html
examples/vegabuilder/: index.html  vegabuilder.js
examples/vtkweb/: cone.html  cone.js  index.html  index.js  tree.html  tree.js  vtk_web_cone.py
js/core/: core.js  util.js
js/data/: _package.js  bin.js  smooth.js
js/plugin/: bokeh.js  dendrogram.js  geonodelink.js  svgColorLegend.js
js/src/: core.js  util.js
js/stream/: stream.js
js/tests/: .jshintrc  absoluteUrl.js  accessor.js  bin.js  config.js  distance-clustering.js  index.html  isBoolean.js  isFunction.js  isNumber.js  plugin.js  queryArguments.js  smooth.js  stream.js  tangelo-exists.js  tangelo-version.js
js/vega/: geovis.js
js/vtkweb/: vtkweb.js
modules/: charitynet.py  datatwiddle.py  echo.py  exceptional.py  mongo.py  nermongo.py  phylomongo.py  testapp.py
scripts/: setup.py.in  tangelo-passwd  vagrant-couchdb-local.ini  vagrant-make  vagrant-provisioning.sh  vagrant-tangelo
src/: tangelod
src/js/: GoogleMapSVG.js  controlPanel.js  core.js  date.js  navbar.js  svgColorLegend.js
tangelo/: MANIFEST.in  __init__.py  __main__.py  __main__.py.in  info.py  plugin.py  server.py  setup.py  setup.py.in  stream.py  tool.py  util.py  vtkweb.py  websocket.py
tangelo.js/core/: core.js.in  util.js
tangelo.js/data/: bin.js
tangelo.js/plugin/: GoogleMapSVG.js  correlationPlot.js  dendrogram.js  geojsMap.js  geojsdots.js  geonodelink.js  nodelink.js  timeline.js
tangelo.js/stream/: _package.js  stream.js
tangelo.js/vega/: _package.js  geovis.js
tangelo.js/vtkweb/: vtkweb.js
tangelo/conf/: tangelo.conf.local
tangelo/data/: get-flickr-data.py
tangelo/plugin/: plugin.conf
tangelo/scripts/: tangelo  tangelo-passwd  tangelo-plugin
tangelo/tangelo/: __init__.py  __main__.py  girder.py  info.py  plugin.py  server.py  stream.py  tool.py  util.py  vtkweb.py  websocket.py
tangelo/web/: index.html
tangelo/ws4py/: messaging.py  streaming.py  websocket.py
testing/: tangelo-pytest.py.in  tangelo-server-test.sh  tangelo-test-runner.py.in  xdwpytest.py.in
testing/js-unit-tests/: accessor.js  accessorFunction.js  cluster.js  isBoolean.js  isFunction.js  smoother.js  tangelo-exists.js
testing/other-tests/: tangelo-version.py.in
testing/phantomjs/: blanket-test.js  coverage-scaffold.html.in  run-jasmine.js  web-content-test-scaffold.js.in
testing/py-coverage/: blanket-gcov.js  (+1 more)
tests/: 200-ok.py  404-not-found.py  analyze-url.py  bundled-plugins.yaml  commandline-version.py  echo-service.py  error-report-code.py  get_free_port.py  plugin-import.py  redirection.py  rest.py  server-identity.py  service-config.py  service-cwd.py  service-import.py  static_file.txt  staticfile.py  stream.py  stream2.py  tangelo-config-settings.py  tangelo-config.py  tangelo-verbose.py  tangelo-version.py  tangelo-watch.py
vm/: README  Vagrantfile  bootstrap.sh
web/: apps.json  index-examples.html  index.html  index.js  xdataweb.css
xdataweb/: __init__.py
(+761 files in other folders)
